--- a/AspNetbasico/default.cshtml
+++ b/AspNetbasico/default.cshtml
@@ -19,6 +19,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@sTitulo</title>
+     
 </head>
 <body>
     <div>
@@ -41,5 +42,7 @@
         <p> es Cierto que 14 = 14 o que 15 = 78 : @(14 == 19 || 15 == 78) </p>
         <p><strong>Personal : @(sNombre + ' ' + sApellidos )</strong></p>
     </div>
+
+    <div> <a href="~/estructuraFor.cshtml">Ver Pagina Web Estructura For</a> </div>
 </body>
 </html>
