--- a/AspNetbasico/estructuraFor.cshtml
+++ b/AspNetbasico/estructuraFor.cshtml
@@ -41,8 +41,8 @@
     }
     <div style="clear:both"></div>
     <p>Bucle Terminado</p>
-
-    <div><text></text></div>
+    
+    <div><a href="~/default.cshtml">Regresar</a></div>
 
 </body>
 </html>
